# fpldf

./: Cargo.toml  README.md
data/: elements.csv
src/: main.rs  models.rs
src/models/: general.rs
